Bugfixing and improvements

--- a/views/altaencuesta.jade
+++ b/views/altaencuesta.jade
@@ -4,7 +4,7 @@ block content
 
   h1 Página de encuestas
   h2 #{v}
-  form(name="altaencuesta", method="post", action="/altaencuesta", enctype="multipart/form-data")
+  form(name="altaencuesta", method="post", action="altaencuesta", enctype="multipart/form-data")
     div.input
         span.label Nombre encuesta:
         br
