--- a/views/index.jade
+++ b/views/index.jade
@@ -10,9 +10,9 @@ html
 
 script.
   function registro() {
-    window.location.href = '/register'
+    window.location.href = 'register'
   }
 
   function login() {
-    window.location.href = '/login'
+    window.location.href = 'login'
   }
