--- a/views/register.jade
+++ b/views/register.jade
@@ -4,7 +4,7 @@ block content
 
   h1 Registro de profesor
 
-  form(name="register", method="post", action="/register")
+  form(name="register", method="post", action="register")
     div.input
         span.label Nombre de usuario:
         br
