--- a/views/login.jade
+++ b/views/login.jade
@@ -4,7 +4,7 @@ block content
 
   h1 Acceso profesores
 
-  form(name="login", method="post", action="/login")
+  form(name="login", method="post", action="login")
     div.input
         span.label Usuario:
         br
