--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,31 @@
 doctype html
-html
+html(lang='en')
   head
-    title= title
-    link(rel='stylesheet', href='stylesheets/style.css')
+    meta(charset='UTF-8')
+    title Survey Manager
+    script(src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
+    link(rel='stylesheet', href='http://getbootstrap.com/dist/css/bootstrap.min.css')
+    link(rel='stylesheet', href='http://getbootstrap.com/dist/css/bootstrap-theme.min.css')
+    link(rel='stylesheet', href='http://getbootstrap.com/assets/css/ie10-viewport-bug-workaround.css')
+    link(rel='stylesheet', href='http://getbootstrap.com/examples/theme/theme.css')
+    script(src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js')
+    script(src='script.js')
   body
+    nav.navbar.navbar-inverse.navbar-fixed-top
+      .container
+        .navbar-header
+          button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar', aria-expanded='false', aria-controls='navbar')
+            span.sr-only Toggle navigation
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+          a.navbar-brand(href='home') Survey Manager
+        #navbar.collapse.navbar-collapse
+          ul.nav.navbar-nav
+            li.active
+              a(href='#') Home
+            li
+              a(href='#about') About
+            li
+              a(href='#contact') Contact
     block content
