--- a/views/login.jade
+++ b/views/login.jade
@@ -6,7 +6,7 @@ block content
     div.jumbotron
       h1 Acceso Profesores
       p
-        form(name="login", method="post", action="login")
+        form(name="login", method="post", action="login", enctype="multipart/form-data")
           .form-group.row
             label.col-sm-2.col-form-label(for='username') Usuario
             .col-sm-10
