--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,7 +9,6 @@ html(lang='en')
     link(rel='stylesheet', href='http://getbootstrap.com/assets/css/ie10-viewport-bug-workaround.css')
     link(rel='stylesheet', href='http://getbootstrap.com/examples/theme/theme.css')
     script(src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js')
-    script(src='script.js')
   body
     nav.navbar.navbar-inverse.navbar-fixed-top
       .container
@@ -19,13 +18,13 @@ html(lang='en')
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.navbar-brand(href='home') Survey Manager
+          a.navbar-brand(href='/users') Survey Manager
         #navbar.collapse.navbar-collapse
           ul.nav.navbar-nav
             li.active
-              a(href='#') Home
+              a(href='/users') Vista Profesor
             li
-              a(href='#about') About
+              a(href='/classes') Clases
             li
-              a(href='#contact') Contact
+              a(href='/surveys') Encuestas
     block content
