Redirect fix & css

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,12 +3,12 @@ html(lang='en')
   head
     meta(charset='UTF-8')
     title Survey Manager
-    script(src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
-    link(rel='stylesheet', href='http://getbootstrap.com/dist/css/bootstrap.min.css')
-    link(rel='stylesheet', href='http://getbootstrap.com/dist/css/bootstrap-theme.min.css')
-    link(rel='stylesheet', href='http://getbootstrap.com/assets/css/ie10-viewport-bug-workaround.css')
-    link(rel='stylesheet', href='http://getbootstrap.com/examples/theme/theme.css')
-    script(src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js')
+    script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
+    link(rel='stylesheet', href='https://getbootstrap.com/dist/css/bootstrap.min.css')
+    link(rel='stylesheet', href='https://getbootstrap.com/dist/css/bootstrap-theme.min.css')
+    link(rel='stylesheet', href='https://getbootstrap.com/assets/css/ie10-viewport-bug-workaround.css')
+    link(rel='stylesheet', href='https://getbootstrap.com/examples/theme/theme.css')
+    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js')
   body
     nav.navbar.navbar-inverse.navbar-fixed-top
       .container
