Improvements and redirection bugfixing

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,13 +18,13 @@ html(lang='en')
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.navbar-brand(href='../users') Survey Manager
+          a.navbar-brand(href='/api/proxy/surveymanager/users') Survey Manager
         #navbar.collapse.navbar-collapse
           ul.nav.navbar-nav
             li.active
-              a(href='../users') Vista Profesor
+              a(href='/api/proxy/surveymanager/users') Vista Profesor
             li
-              a(href='../classes') Clases
+              a(href='/api/proxy/surveymanager/classes') Clases
             li
-              a(href='../surveys') Encuestas
+              a(href='/api/proxy/surveymanager/surveys') Encuestas
     block content
