--- a/views/layoutmaterial.jade
+++ b/views/layoutmaterial.jade
@@ -8,14 +8,15 @@ html
     // Wide card with share menu button
     style.
       body{
-      background-color: lightgray;
+      background: url(/wallpaper.png);
+      background-color: rgba(0.75, 0.75, 0.75, 0.5);
       }
       .demo-card-wide{
       width: 100%;
       }
       .demo-card-wide > .mdl-card__title {
       color: #fff;
-      height: 176px;
+      height: 100px;
       background: gray;
       }
       .demo-card-wide > .mdl-card__menu {
