--- a/views/classes_list_material.jade
+++ b/views/classes_list_material.jade
@@ -6,7 +6,7 @@ block content
         .page-content
           .mdl-grid
             each classroom in clases
-              .mdl-cell.mdl-cell--4-col
+              .mdl-cell.mdl-cell--4-col.mdl-cell--top
                 .demo-card-wide.mdl-card.mdl-shadow--2dp
                   .mdl-card__title
                     h2.mdl-card__title-text Class: !{classroom.key}
