--- a/views/layoutmaterial.jade
+++ b/views/layoutmaterial.jade
@@ -8,7 +8,7 @@ html
     // Wide card with share menu button
     style.
       body{
-      background: url(/wallpaper.png);
+      background: url(/api/proxy/surveymanager/wallpaper.png);
       background-color: rgba(0.75, 0.75, 0.75, 0.5);
       }
       .demo-card-wide{
