--- a/views/surveys_list_material.jade
+++ b/views/surveys_list_material.jade
@@ -24,7 +24,7 @@ block content
           button.mdl-button.mdl-js-button.mdl-button--fab.mdl-js-ripple-effect.mdl-button--colored.show-modal
             i.material-icons add
       dialog.mdl-dialog.mdl-transition-in
-        form(method="post", action="../surveys", enctype="multipart/form-data")
+        form(method="post", action="surveys", enctype="multipart/form-data")
           .mdl-dialog__title
             | Add survey
           .mdl-dialog__content
