Small bug fixed

--- a/views/login_material.jade
+++ b/views/login_material.jade
@@ -367,11 +367,11 @@ html
         form(id="loginform", name="login", method="post", action="login", enctype="multipart/form-data")
           .input
             label(for='username') Username
-            input#name(type='text', name='username')
+            input#username(type='text', name='username')
             span.spin
           .input
             label(for='password') Password
-            input#pass(type='password', name='pass')
+            input#password(type='password', name='pass')
             span.spin
           .button.login
             button
