--- a/views/surveys_view_material.jade
+++ b/views/surveys_view_material.jade
@@ -11,7 +11,7 @@ block content
             .mdl-card__supporting-text
               | Pre and post surveys:
             .mdl-card__supporting-text
-              | !{survey.pre}, !{survey.post}
+              | !{survey.pre}, !{survey.post}, !{survey.teacher}
           .mdl-cell.mdl-cell--4-col.mdl-cell--8-col-tablet.mdl-grid.mdl-grid--no-spacing
             .mdl-card.mdl-shadow--2dp.mdl-cell.mdl-cell--4-col.mdl-cell--3-col-tablet.mdl-cell--12-col-desktop
               .mdl-card__title
