--- a/views/layoutmaterial.jade
+++ b/views/layoutmaterial.jade
@@ -5,6 +5,7 @@ html
     link(rel='stylesheet', href='https://fonts.googleapis.com/icon?family=Material+Icons')
     link(rel='stylesheet', href='https://code.getmdl.io/1.3.0/material.indigo-amber.min.css')
     script(defer='', src='https://code.getmdl.io/1.3.0/material.min.js')
+    script(defer='', src='https://code.jquery.com/jquery-3.3.1.min.js')
     // Wide card with share menu button
     style.
       body{
